--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 
     </div>
   </header>
+    <div id="search-bar" style="display:none; text-align:center; margin-top:10px;">
+    <input
+      type="text"
+      id="search-input"
+      placeholder="Type to search..."
+      style="padding:8px; width:60%; border:1px solid #ccc;"
+    >
+  </div>
   <main class="hero-section">
     <div class="overlay"></div>
     <div class="hero-content">
@@ -84,7 +92,47 @@
 
   
 
-    <script src="script.js"></script>
+    <script>
+const banner = document.createElement("div");
+banner.innerText = " Welcome to BookEcho!";
+banner.classList.add("top-banner");
+document.body.prepend(banner);
+
+setTimeout(() => {
+  banner.style.display = "none";
+}, 3000);
+
+      const navLinks = document.querySelectorAll("nav ul li a");
+navLinks.forEach(link => {
+  link.addEventListener("mouseover", () => { link.style.opacity = "0.7"; });
+  link.addEventListener("mouseout", () => { link.style.opacity = "1"; });
+});
+
+const searchIcon = document.querySelector(".ri-search-line");
+const searchBar = document.getElementById("search-bar");
+const searchInput = document.getElementById("search-input");
+
+let searchOpen = false;
+
+searchIcon.addEventListener("click", () => {
+  if (searchOpen) {
+    searchBar.style.display = "none";
+    searchOpen = false;
+  } else {
+    searchBar.style.display = "block";
+    searchInput.focus();
+    searchOpen = true;
+  }
+});
+
+searchInput.addEventListener("change", () => {
+  console.log(searchInput.value);
+});
+
+
+
+
+    </script>
 
 
  
